<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/main_tab_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/main_tab_video"
        android:title="@string/title_video" />
    <item
        android:id="@+id/i_empty"
        android:title="" />
    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/main_tab_cart"
        android:title="@string/title_shopping_cart" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/main_tab_mine"
        android:title="@string/title_mine" />

</menu>