<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickEvent"
            type="com.fjsy.whb.login.SmsLoginFragment.ClickProxyImp" />

        <variable
            name="vm"
            type="com.fjsy.whb.login.LoginViewModel" />

        <import type="com.fjsy.architecture.global.data.constants.Constants" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/dp_34"
                android:paddingRight="@dimen/dp_34">

                <TextView
                    android:id="@+id/tv_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_32"
                    android:text="@string/login"
                    android:textColor="@color/c_222222"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_28"
                    android:background="@drawable/drawable_gray_8"
                    android:hint="@string/input_phone_num"
                    android:paddingLeft="@dimen/dp_14"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_" />

                <LinearLayout
                    android:id="@+id/linear_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_phone">

                    <EditText
                        android:id="@+id/edit_psw"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/dp_48"
                        android:layout_weight="1"
                        android:textSize="@dimen/sp_15"
                        android:background="@drawable/drawable_gray_8"
                        android:hint="@string/input_image_code"
                        android:paddingLeft="@dimen/dp_14" />

                    <ImageView
                        android:layout_width="@dimen/dp_120"
                        android:layout_height="@dimen/dp_48"
                        android:layout_marginLeft="@dimen/dp_10" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_sms"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@drawable/drawable_gray_8"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/dp_14"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_image">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/input_smscode"
                        android:textSize="@dimen/sp_15"
                        android:background="@null" />

                    <TextView
                        android:id="@+id/tv_getCaptcha"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/dp_15"
                        android:gravity="center"
                        android:onClick="@{()->clickEvent.sendSmsCode()}"
                        android:text="@{vm.sendMsgCountDown.equals(Constants.defaultTime)?@string/get_captcha:String.valueOf(vm.sendMsgCountDown)}"
                        android:textColor="@color/c_FB6A3E"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="@drawable/drawable_gradient_8"
                    android:gravity="center"
                    android:onClick="@{()->clickEvent.login()}"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18"
                    app:layout_constraintTop_toBottomOf="@id/linear_sms" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/linear_wechat"
            layout="@layout/layout_third_login"
            app:AgreeEvent="@{()->clickEvent.isAgreeCheck()}"
            app:isAgree="@{vm.isAgree}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login"
            app:wechatLogin="@{()->clickEvent.wechatLogin()}" />
    </LinearLayout>
</layout>